data/derived/sp14/progs/unify/prog3042.ml.out
Characters 31-34:
  let _ = stringOfList (fun x -> 5*x) [1];;
                                 ^^^
Error: This expression has type int but an expression was expected of type
         string
